# bible-vala

./: README.md  meson.build
data/: ChapterView.css  css.gresource.xml  meson.build
src/: Application.vala  MainWindow.vala
src/Utils/: APIQuery.vala  BibleUtils.vala
src/Widgets/: BookView.vala  ChapterView.vala
